--- a/doc.html
+++ b/doc.html
@@ -11,35 +11,35 @@
 </head>
 <body>
 
-<!-- Zkontrolujte prosím nastavení kódování v hlavièce dokumentu 
-     podle pou¾itého editoru -->
+<!-- Zkontrolujte prosÃ­m nastavenÃ­ kÃ³dovÃ¡nÃ­ v hlaviÃ¨ce dokumentu 
+     podle pouÂ¾itÃ©ho editoru -->
 
-<h1>IIS - Informaèné systémy</h1> <!-- Nahradte názvem svého zadání -->
+<h1>IIS - InformaÃ¨nÃ© systÃ©my</h1> <!-- Nahradte nÃ¡zvem svÃ©ho zadÃ¡nÃ­ -->
 
 <dl>
 	<dt>Autori</dt>
-	<dd>Dávid Jókay <!-- Nahraïte skuteènım jménem a e-mailem autora a popisem èinnosti -->
-	    <a href="mailto:xjokay00@stud.fit.vutbr.cz">xjokay00@stud.fit.vutbr.cz</a> - správa sedení, vytváranie a správa udalostí, vytváranie vstupeniek
+	<dd>DÃ¡vid JÃ³kay <!-- NahraÃ¯te skuteÃ¨nÃ½m jmÃ©nem a e-mailem autora a popisem Ã¨innosti -->
+	    <a href="mailto:xjokay00@stud.fit.vutbr.cz">xjokay00@stud.fit.vutbr.cz</a> - sprÃ¡va sedenÃ­, vytvÃ¡ranie a sprÃ¡va udalostÃ­, vytvÃ¡ranie vstupeniek
 	</dd>
-	<dd>Matej Vadoviè <!-- Nahraïte skuteènım jménem a e-mailem autora a popisem èinnosti -->
-	    <a href="mailto:xvadov01@stud.fit.vutbr.cz">xvadov01@stud.fit.vutbr.cz</a> - schéma databáze, kalendár udalostí, správa lokácií, vytvorenie a správa rolí
+	<dd>Matej VadoviÃ¨ <!-- NahraÃ¯te skuteÃ¨nÃ½m jmÃ©nem a e-mailem autora a popisem Ã¨innosti -->
+	    <a href="mailto:xvadov01@stud.fit.vutbr.cz">xvadov01@stud.fit.vutbr.cz</a> - schÃ©ma databÃ¡ze, kalendÃ¡r udalostÃ­, sprÃ¡va lokÃ¡ciÃ­, vytvorenie a sprÃ¡va rolÃ­
 	</dd>
-  <dd>Marek Buch <!-- Nahraïte skuteènım jménem a e-mailem autora a popisem èinnosti -->
-	    <a href="mailto:xbuchm02@stud.fit.vutbr.cz">xbuchm02@stud.fit.vutbr.cz</a> - vytváranie a správa kategórií, vytváranie lokácií, správa udalostí vy¾adujúcich platbu vopred
+  <dd>Marek Buch <!-- NahraÃ¯te skuteÃ¨nÃ½m jmÃ©nem a e-mailem autora a popisem Ã¨innosti -->
+	    <a href="mailto:xbuchm02@stud.fit.vutbr.cz">xbuchm02@stud.fit.vutbr.cz</a> - vytvÃ¡ranie a sprÃ¡va kategÃ³riÃ­, vytvÃ¡ranie lokÃ¡ciÃ­, sprÃ¡va udalostÃ­ vyÂ¾adujÃºcich platbu vopred
 	</dd>
-	<dt>URL aplikácie</dt>
+	<dt>URL aplikÃ¡cie</dt>
 	<dd><a href="https://laravel-iis.com/">https://laravel-iis.com/</a></dd>
 	
 </dl>
 
-<h2>U¾ívatelia systému pre testovanie</h2>
-<p>Uveïte prosím existujúcich zástupcov <strong>v¹etkıch rolí u¾ívateµov</strong>.</p>
+<h2>UÂ¾Ã­vatelia systÃ©mu pre testovanie</h2>
+<p>UveÃ¯te prosÃ­m existujÃºcich zÃ¡stupcov <strong>vÂ¹etkÃ½ch rolÃ­ uÂ¾Ã­vateÂµov</strong>.</p>
 <table>
 <tbody><tr><th>Login</th><th>Heslo</th><th>Rola</th></tr>
-<tr><td>john@admin.com</td><td>test123.</td><td>Administrátor</td></tr>
-<tr><td>karol@mod.com</td><td>test123.</td><td>Moderátor</td></tr>
-<tr><td>jozef@member.com</td><td>test123.</td><td>Prihásenı u¾ívateµ</td></tr>
-<tr><td>robert@member.com</td><td>test123.</td><td>Prihásenı u¾ívateµ</td></tr><tr><td>david@member.com</td><td>test123.</td><td>Prihásenı u¾ívateµ</td></tr></tbody></table>
+<tr><td>john@admin.com</td><td>test123.</td><td>AdministrÃ¡tor</td></tr>
+<tr><td>karol@mod.com</td><td>test123.</td><td>ModerÃ¡tor</td></tr>
+<tr><td>jozef@member.com</td><td>test123.</td><td>PrihÃ¡senÃ½ uÂ¾Ã­vateÂµ</td></tr>
+<tr><td>robert@member.com</td><td>test123.</td><td>PrihÃ¡senÃ½ uÂ¾Ã­vateÂµ</td></tr><tr><td>david@member.com</td><td>test123.</td><td>PrihÃ¡senÃ½ uÂ¾Ã­vateÂµ</td></tr></tbody></table>
 
  
 
@@ -47,24 +47,24 @@
 
 <p><a href="https://www.youtube.com/watch?v=P9IfRmfNscE">https://www.youtube.com/watch?v=P9IfRmfNscE</a></p> 
 
-<h2>Implementácia</h2>
-<li><i>app/Http/Controllers/UserController.php</i>: správa u¾ívateµov</li>
-		<li><i>app/Http/Controllers/AuthController.php</i>: správa sedení</li>
-		<li><i>app/Http/Controllers/EventController.php</i>: správa udalostí</li>
-		<li><i>app/Http/Controllers/CategoryController.php</i>: správa kategorií udalostí</li>
+<h2>ImplementÃ¡cia</h2>
+<li><i>app/Http/Controllers/UserController.php</i>: sprÃ¡va uÂ¾Ã­vateÂµov</li>
+		<li><i>app/Http/Controllers/AuthController.php</i>: sprÃ¡va sedenÃ­</li>
+		<li><i>app/Http/Controllers/EventController.php</i>: sprÃ¡va udalostÃ­</li>
+		<li><i>app/Http/Controllers/CategoryController.php</i>: sprÃ¡va kategoriÃ­ udalostÃ­</li>
 		<li>
-			<i>app/Http/Controllers/LocationController.php</i>: správa lokácií
+			<i>app/Http/Controllers/LocationController.php</i>: sprÃ¡va lokÃ¡ciÃ­
 		</li>
-		<li><i>app/Http/Controllers/TicketController.php</i>: správa listkov pre udalosti</li>
+		<li><i>app/Http/Controllers/TicketController.php</i>: sprÃ¡va listkov pre udalosti</li>
 		<li>
-			<i>app/Http/Controllers/ReviewController.php</i>: správa hodnotení udalostí</li>
+			<i>app/Http/Controllers/ReviewController.php</i>: sprÃ¡va hodnotenÃ­ udalostÃ­</li>
 		
 		
 		
 		
 
-<h3>Databáza</h3><img src="./doc_files/image.png" alt="Database Schema">
-<h2>In¹talácia</h2>
+<h3>DatabÃ¡za</h3><img src="./doc_files/database.png" alt="Database Schema">
+<h2>InÂ¹talÃ¡cia</h2>
     
 
     
@@ -74,28 +74,28 @@
         <li>Composer 2.2.6</li>
         <li>npm 10.1.0</li>
         <li>Node.js 20.1.0</li>
-        <li>Databáza, napríklad MySQL</li>
+        <li>DatabÃ¡za, naprÃ­klad MySQL</li>
     </ul>
-    <h3>Lokálna in¹talácia</h3>Pre lokálnu in¹taláciu je tu link na GitHub: <a href="https://github.com/tigrisske/IIS-projekt">https://github.com/tigrisske/IIS-projekt</a>. 
-Je potrebné spusti» Backend a Frontend èasti aplikácie.
+    <h3>LokÃ¡lna inÂ¹talÃ¡cia</h3>Pre lokÃ¡lnu inÂ¹talÃ¡ciu je tu link na GitHub: <a href="https://github.com/tigrisske/IIS-projekt">https://github.com/tigrisske/IIS-projekt</a>. 
+Je potrebnÃ© spustiÂ» Backend a Frontend Ã¨asti aplikÃ¡cie.
     <h4>Backend</h4>
     <ol>
-        <li>V koreòovom adresári projektu spustením príkazu <code>composer install</code> nain¹talujeme potrebné balíèky.</li>
-        <li>Vytvori» a nakonfiigurova» súbor <code>.env</code> (príklad v .env.example)</li>
-        <li><code>pphp artisan migrate:fresh --seed</code> vytvoríme potrebné tabuµky v databáze a naplníme ich testovacími dátami.</li>
-        <li><code>php artisan serve</code> spustíme lokálny server.</li>
+        <li>V koreÃ²ovom adresÃ¡ri projektu spustenÃ­m prÃ­kazu <code>composer install</code> nainÂ¹talujeme potrebnÃ© balÃ­Ã¨ky.</li>
+        <li>VytvoriÂ» a nakonfiigurovaÂ» sÃºbor <code>.env</code> (prÃ­klad v .env.example)</li>
+        <li><code>pphp artisan migrate:fresh --seed</code> vytvorÃ­me potrebnÃ© tabuÂµky v databÃ¡ze a naplnÃ­me ich testovacÃ­mi dÃ¡tami.</li>
+        <li><code>php artisan serve</code> spustÃ­me lokÃ¡lny server.</li>
     </ol>
     <h4>Frontend</h4>
     <ol>
-        <li>V adresári react spustením <code>npm install</code> nain¹talujeme potrebné balíèky.</li>
-        <li>Vytvori» a nakonfiigurova» súbor <code>.env</code> (príklad v .env.example)</li>
-        <li><code>npm start</code> spustíme lokálny server.</li>
+        <li>V adresÃ¡ri react spustenÃ­m <code>npm install</code> nainÂ¹talujeme potrebnÃ© balÃ­Ã¨ky.</li>
+        <li>VytvoriÂ» a nakonfiigurovaÂ» sÃºbor <code>.env</code> (prÃ­klad v .env.example)</li>
+        <li><code>npm start</code> spustÃ­me lokÃ¡lny server.</li>
     </ol>
-    <h3>Online in¹talácia</h3>
-    Aplikáciu sme nasadili na server Hostinger. Je dostupná na adrese <a href="https://laravel-iis.com//">https://laravel-iis.com/</a>.
+    <h3>Online inÂ¹talÃ¡cia</h3>
+    AplikÃ¡ciu sme nasadili na server Hostinger. Je dostupnÃ¡ na adrese <a href="https://laravel-iis.com//">https://laravel-iis.com/</a>.
 
-<h2>Známé problémy</h2>
-<p>U¾ívateµ pri vytváraní eventu nieje schopnı prida» svoju vlastnú fotku. V malom mno¾ste prípadov pri prístupe na server sa zobrazí chyba CORS konfigurácie.</p>
+<h2>ZnÃ¡mÃ© problÃ©my</h2>
+<p>UÂ¾Ã­vateÂµ pri vytvÃ¡ranÃ­ eventu nieje schopnÃ½ pridaÂ» svoju vlastnÃº fotku. V malom mnoÂ¾ste prÃ­padov pri prÃ­stupe na server sa zobrazÃ­ chyba CORS konfigurÃ¡cie.</p>
 
 
 
