--- a/doc.html
+++ b/doc.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<!-- saved from url=(0064)file:///C:/Users/Marek/Desktop/%C5%A1kola/iis/Projekt%20IIS.html -->
 <html>
 
 <head>
@@ -30,7 +29,7 @@
     <!-- Zkontrolujte prosím nastavení kódování v hlavièce dokumentu 
      podle pou¾itého editoru -->
 
-    <h1>IIS - Informaèné systémy</h1> <!-- Nahradte názvem svého zadání -->
+    <h1>Akcie a udalosti</h1> <!-- Nahradte názvem svého zadání -->
 
     <dl>
         <dt>Autori</dt>
