chaneg image in doc

--- a/doc.html
+++ b/doc.html
@@ -106,7 +106,7 @@
 
     <h3>Databáza</h3>
     <p>Na inicializaciu databazy sme pouzili zabudovanu funkcionalitu frameworku Laravel, migracie a databazove seedre.</p>
-    <img src="./doc_files/image.png" alt="Database Schema">
+    <img src="./database.png" alt="Database Schema">
 
     <h2>In¹talácia</h2>
     <h3>Prerekvizity</h3>
