change the encoding to utf-8

--- a/doc.html
+++ b/doc.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-2">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
     <title>Projekt IIS</title>
     <style type="text/css">
@@ -26,29 +26,29 @@
 
 <body>
 
-    <!-- Zkontrolujte prosím nastavení kódování v hlavičce dokumentu 
-     podle použitého editoru -->
+    <!-- Zkontrolujte prosĂ­m nastavenĂ­ kĂłdovĂĄnĂ­ v hlaviÄce dokumentu 
+     podle pouĹžitĂŠho editoru -->
 
-    <h1>Akcie a udalosti</h1> <!-- Nahradte názvem svého zadání -->
+    <h1>Akcie a udalosti</h1> <!-- Nahradte nĂĄzvem svĂŠho zadĂĄnĂ­ -->
 
     <dl>
         <dt>Autori</dt>
-        <dd>Dávid Jókay <!-- Nahraďte skutečným jménem a e-mailem autora a popisem činnosti -->
-            <a href="mailto:xjokay00@stud.fit.vutbr.cz">xjokay00@stud.fit.vutbr.cz</a> - správa sedení, vytváranie a správa udalostí, vytváranie vstupeniek
+        <dd>DĂĄvid JĂłkay <!-- NahraÄte skuteÄnĂ˝m jmĂŠnem a e-mailem autora a popisem Äinnosti -->
+            <a href="mailto:xjokay00@stud.fit.vutbr.cz">xjokay00@stud.fit.vutbr.cz</a> - sprĂĄva sedenĂ­, vytvĂĄranie a sprĂĄva udalostĂ­, vytvĂĄranie vstupeniek
         </dd>
-        <dd>Matej Vadovič <!-- Nahraďte skutečným jménem a e-mailem autora a popisem činnosti -->
-            <a href="mailto:xvadov01@stud.fit.vutbr.cz">xvadov01@stud.fit.vutbr.cz</a> - schéma databáze, kalendár udalostí, správa lokácií, vytvorenie a správa rolí
+        <dd>Matej VadoviÄ <!-- NahraÄte skuteÄnĂ˝m jmĂŠnem a e-mailem autora a popisem Äinnosti -->
+            <a href="mailto:xvadov01@stud.fit.vutbr.cz">xvadov01@stud.fit.vutbr.cz</a> - schĂŠma databĂĄze, kalendĂĄr udalostĂ­, sprĂĄva lokĂĄciĂ­, vytvorenie a sprĂĄva rolĂ­
         </dd>
-        <dd>Marek Buch <!-- Nahraďte skutečným jménem a e-mailem autora a popisem činnosti -->
-            <a href="mailto:xbuchm02@stud.fit.vutbr.cz">xbuchm02@stud.fit.vutbr.cz</a> - vytváranie a správa kategórií, vytváranie lokácií, správa udalostí vyžadujúcich platbu vopred
+        <dd>Marek Buch <!-- NahraÄte skuteÄnĂ˝m jmĂŠnem a e-mailem autora a popisem Äinnosti -->
+            <a href="mailto:xbuchm02@stud.fit.vutbr.cz">xbuchm02@stud.fit.vutbr.cz</a> - vytvĂĄranie a sprĂĄva kategĂłriĂ­, vytvĂĄranie lokĂĄciĂ­, sprĂĄva udalostĂ­ vyĹžadujĂşcich platbu vopred
         </dd>
-        <dt>URL aplikácie</dt>
+        <dt>URL aplikĂĄcie</dt>
         <dd><a href="https://laravel-iis.com/">https://laravel-iis.com/</a></dd>
 
     </dl>
 
-    <h2>Užívatelia systému pre testovanie</h2>
-    <p>Uveďte prosím existujúcich zástupcov <strong>všetkých rolí užívateľov</strong>.</p>
+    <h2>UĹžĂ­vatelia systĂŠmu pre testovanie</h2>
+    <p>UveÄte prosĂ­m existujĂşcich zĂĄstupcov <strong>vĹĄetkĂ˝ch rolĂ­ uĹžĂ­vateÄžov</strong>.</p>
     <table>
         <tbody>
             <tr>
@@ -59,27 +59,27 @@
             <tr>
                 <td>john@admin.com</td>
                 <td>test123.</td>
-                <td>Administrátor</td>
+                <td>AdministrĂĄtor</td>
             </tr>
             <tr>
                 <td>karol@mod.com</td>
                 <td>test123.</td>
-                <td>Moderátor</td>
+                <td>ModerĂĄtor</td>
             </tr>
             <tr>
                 <td>jozef@member.com</td>
                 <td>test123.</td>
-                <td>Prihásený užívateľ</td>
+                <td>PrihĂĄsenĂ˝ uĹžĂ­vateÄž</td>
             </tr>
             <tr>
                 <td>robert@member.com</td>
                 <td>test123.</td>
-                <td>Prihásený užívateľ</td>
+                <td>PrihĂĄsenĂ˝ uĹžĂ­vateÄž</td>
             </tr>
             <tr>
                 <td>david@member.com</td>
                 <td>test123.</td>
-                <td>Prihásený užívateľ</td>
+                <td>PrihĂĄsenĂ˝ uĹžĂ­vateÄž</td>
             </tr>
         </tbody>
     </table>
@@ -90,53 +90,53 @@
 
     <p><a href="https://www.youtube.com/watch?v=P9IfRmfNscE">https://www.youtube.com/watch?v=P9IfRmfNscE</a></p>
 
-    <h2>Implementácia</h2>
-    <p> Aplikáciu sme implementovali v jazyku PHP s použitím frameworku Laravel v10. Na frontend sme použili React. </p>
-    <li><i>app/Http/Controllers/UserController.php</i>: správa užívateľov</li>
-    <li><i>app/Http/Controllers/AuthController.php</i>: správa sedení</li>
-    <li><i>app/Http/Controllers/EventController.php</i>: správa udalostí</li>
-    <li><i>app/Http/Controllers/CategoryController.php</i>: správa kategorií udalostí</li>
+    <h2>ImplementĂĄcia</h2>
+    <p> AplikĂĄciu sme implementovali v jazyku PHP s pouĹžitĂ­m frameworku Laravel v10. Na frontend sme pouĹžili React. </p>
+    <li><i>app/Http/Controllers/UserController.php</i>: sprĂĄva uĹžĂ­vateÄžov</li>
+    <li><i>app/Http/Controllers/AuthController.php</i>: sprĂĄva sedenĂ­</li>
+    <li><i>app/Http/Controllers/EventController.php</i>: sprĂĄva udalostĂ­</li>
+    <li><i>app/Http/Controllers/CategoryController.php</i>: sprĂĄva kategoriĂ­ udalostĂ­</li>
     <li>
-        <i>app/Http/Controllers/LocationController.php</i>: správa lokácií
+        <i>app/Http/Controllers/LocationController.php</i>: sprĂĄva lokĂĄciĂ­
     </li>
-    <li><i>app/Http/Controllers/TicketController.php</i>: správa listkov pre udalosti</li>
+    <li><i>app/Http/Controllers/TicketController.php</i>: sprĂĄva listkov pre udalosti</li>
     <li>
-        <i>app/Http/Controllers/ReviewController.php</i>: správa hodnotení udalostí
+        <i>app/Http/Controllers/ReviewController.php</i>: sprĂĄva hodnotenĂ­ udalostĂ­
     </li>
 
-    <h3>Databáza</h3>
+    <h3>DatabĂĄza</h3>
     <p>Na inicializaciu databazy sme pouzili zabudovanu funkcionalitu frameworku Laravel, migracie a databazove seedre.</p>
     <img src="./database.png" alt="Database Schema">
 
-    <h2>Inštalácia</h2>
+    <h2>InĹĄtalĂĄcia</h2>
     <h3>Prerekvizity</h3>
     <ul>
         <li>PHP 8.1</li>
         <li>Composer 2.2.6</li>
         <li>npm 10.1.0</li>
         <li>Node.js 20.1.0</li>
-        <li>Databáza, napríklad MySQL</li>
+        <li>DatabĂĄza, naprĂ­klad MySQL</li>
     </ul>
-    <h3>Lokálna inštalácia</h3>Pre lokálnu inštaláciu je tu link na GitHub: <a href="https://github.com/tigrisske/IIS-projekt">https://github.com/tigrisske/IIS-projekt</a>.
-    Je potrebné spustiť Backend a Frontend časti aplikácie.
+    <h3>LokĂĄlna inĹĄtalĂĄcia</h3>Pre lokĂĄlnu inĹĄtalĂĄciu je tu link na GitHub: <a href="https://github.com/tigrisske/IIS-projekt">https://github.com/tigrisske/IIS-projekt</a>.
+    Je potrebnĂŠ spustiĹĽ Backend a Frontend Äasti aplikĂĄcie.
     <h4>Backend</h4>
     <ol>
-        <li>V koreňovom adresári projektu spustením príkazu <code>composer install</code> nainštalujeme potrebné balíčky.</li>
-        <li>Vytvoriť a nakonfiigurovať súbor <code>.env</code> (príklad v .env.example)</li>
-        <li><code>php artisan migrate:refresh --seed</code> vytvoríme potrebné tabuľky v databáze a naplníme ich testovacími dátami.</li>
-        <li><code>php artisan serve</code> spustíme lokálny server.</li>
+        <li>V koreĹovom adresĂĄri projektu spustenĂ­m prĂ­kazu <code>composer install</code> nainĹĄtalujeme potrebnĂŠ balĂ­Äky.</li>
+        <li>VytvoriĹĽ a nakonfiigurovaĹĽ sĂşbor <code>.env</code> (prĂ­klad v .env.example)</li>
+        <li><code>php artisan migrate:refresh --seed</code> vytvorĂ­me potrebnĂŠ tabuÄžky v databĂĄze a naplnĂ­me ich testovacĂ­mi dĂĄtami.</li>
+        <li><code>php artisan serve</code> spustĂ­me lokĂĄlny server.</li>
     </ol>
     <h4>Frontend</h4>
     <ol>
-        <li>V adresári react spustením <code>npm install</code> nainštalujeme potrebné balíčky.</li>
-        <li>Vytvoriť a nakonfiigurovať súbor <code>.env</code> (príklad v .env.example)</li>
-        <li><code>npm start</code> spustíme lokálny server.</li>
+        <li>V adresĂĄri react spustenĂ­m <code>npm install</code> nainĹĄtalujeme potrebnĂŠ balĂ­Äky.</li>
+        <li>VytvoriĹĽ a nakonfiigurovaĹĽ sĂşbor <code>.env</code> (prĂ­klad v .env.example)</li>
+        <li><code>npm start</code> spustĂ­me lokĂĄlny server.</li>
     </ol>
-    <h3>Online inštalácia</h3>
-    Aplikáciu sme nasadili na server Hostinger. Je dostupná na adrese <a href="https://laravel-iis.com//">https://laravel-iis.com/</a>.
+    <h3>Online inĹĄtalĂĄcia</h3>
+    AplikĂĄciu sme nasadili na server Hostinger. Je dostupnĂĄ na adrese <a href="https://laravel-iis.com//">https://laravel-iis.com/</a>.
 
-    <h2>Známé problémy</h2>
-    <p>Užívateľ pri vytváraní eventu nieje schopný pridať svoju vlastnú fotku. V malom množste prípadov pri prístupe na server sa zobrazí chyba CORS konfigurácie.</p>
+    <h2>ZnĂĄmĂŠ problĂŠmy</h2>
+    <p>UĹžĂ­vateÄž pri vytvĂĄranĂ­ eventu nieje schopnĂ˝ pridaĹĽ svoju vlastnĂş fotku. V malom mnoĹžste prĂ­padov pri prĂ­stupe na server sa zobrazĂ­ chyba CORS konfigurĂĄcie.</p>
 
 
 
